digiKam 7.4.0 - Release date: 2021-xx-xx

*****************************************************************************************************
NEW FEATURES:

Bundle : AppImage is now compiled under Mageia 7.1 instead 6.1 for a better binary compatibility with recent Linux.
Bundle : AppImage use last Qt 5.15.2 and KF5 5.84 libraries.
Plugins: New tool to share items on the network with a Motion JPEG stream server.

*****************************************************************************************************
BUGFIXES:

001 ==> 439206 - Face thumbnails not generating properly for Fujifilm RAW files when sidecar files enabled.
002 ==> 416744 - Changes are not saved after deleting face rectangle from picture.
003 ==> 439785 - Edit Metadata resets Exif info upon selecting 'Apply'.
004 ==> 439839 - GPS-Correlator - not translatabke strings.
005 ==> 429338 - Context menus shown in wrong locations on Wayland.
006 ==> 439970 - Action to toggle Pick tags/labels.
007 ==> 439976 - Converting CR3 into DNG via batch processing leads to loss of meta data (star rating is lost).
008 ==> 439913 - iNaturalist Export "Unknown Error" when click in Identification field.
009 ==> 440030 - Database migration 7.2 -> 7.3 fails.
010 ==> 440015 - Metadata Template insists on putting in a country name.
011 ==> 440127 - Program crashes using SEARCH or KEYWORD tabs - JPEG 2000 images relevant.
012 ==> 440192 - Add Advanced Metadata read/write options for title tags.
013 ==> 440249 - digiKam collapse when Pixel XL image metadata tab is selected.
014 ==> 440219 - Suggestion: Dynamic Albums.
015 ==> 440212 - digiKam 7.3.0 fails to update the database schema from version 12 to version 13.
016 ==> 440216 - digiKam is duplicating existing EXIF tags on metadata save.
017 ==> 424952 - ERR_CERT_AUTHORITY_INVALID on accessing many component from within digiKam.
018 ==> 440313 - digiKam 7.3.0 FTBFS with Qt 5.9.5 [patch].
019 ==> 