@@ -28,4 +28,5 @@ BUGFIXES:
 016 ==> 440216 - digiKam is duplicating existing EXIF tags on metadata save.
 017 ==> 424952 - ERR_CERT_AUTHORITY_INVALID on accessing many component from within digiKam.
 018 ==> 440313 - digiKam 7.3.0 FTBFS with Qt 5.9.5 [patch].
-019 ==> 
+019 ==> 440363 - Missing entry field for State/Province in Metadata Editor.
+020 ==> 
